@@ -19,6 +19,9 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	  See README.pgsql for instructions on fixing existing tables.
 	- vmoduser: update maildirsize instead of just deleting it when
 	  modifying quota.
+	- vchkpw: classify POP/IMAP connections from select IPs (defaults
+	  to 127.0.0.1) as webmail and check NO_WEBMAIL user flag instead
+	  of NO_POP and NO_IMAP.
 
 	Gentoo Port
 	- Integrate vuserinfo patch to fix the -a option and to display 
